[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/FX/smoke/smoke_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/FX/white_puff/whitePuff01.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Smoke_mushroom.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 9
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0917431, 0.509174, 0.90367, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 16, 16, 1 )
flag_disable_z = true
direction = Vector3( 20, 20, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.921569, 1, 0, 1 )
color_ramp = SubResource( 2 )
anim_speed = 1.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.25, 27.5625 )

[node name="Smoke_Mushroom" type="Node2D"]
script = ExtResource( 3 )

[node name="fog" type="Sprite" parent="."]
modulate = Color( 0.57, 0.64, 0.11, 1 )
position = Vector2( -1, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="Timer1" type="Timer" parent="fog"]
wait_time = 0.05
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.603922 )
material = SubResource( 4 )
amount = 16
lifetime = 0.5
speed_scale = 0.5
randomness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 128

[node name="attack_hitbox" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 0.51, 1, 0.550833, 1 )
shape = SubResource( 5 )

[node name="damage_timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="hit_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="audio_manager" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="fog/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
